# cntr

./: .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.example  LICENSE.md  Makefile  NOTES  PACKAGING.md  README.md  default.lock.nix  default.nix  flake.nix  renovate.json  rustfmt.toml  shell-completion-test.nix  treefmt.nix  vm-test.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  packages.yml  publish.yml  update-flake-inputs.yml  update-flake-lock.yml
completions/: cntr.bash  cntr.fish  cntr.nu  cntr.zsh
contrib/alpine/: APKBUILD  build.sh
contrib/arch/: PKGBUILD  build.sh
contrib/debian/: build.sh  changelog  control  copyright  rules
contrib/fedora/: build.sh  cntr.spec
contrib/gentoo/: build.sh
doc/: cntr.1.scd
examples/: cntrfs.rs  userns.rs
scripts/: create-release.sh  drone-secrets.yml  pre-commit  sign-drone.sh
src/: capabilities.rs  cgroup.rs  cli.rs  cmd.rs  container.rs  container_setup.rs  dirent.rs  dotcntr.rs  exec.rs  fchownat.rs  fd.rs  file_utils.rs  files.rs  fs.rs  fsuid.rs  fusefd.rs  inode.rs  ioctl.rs  ipc.rs  lib.rs  linkat.rs  logging.rs  lsm.rs  main.rs  mount_context.rs  mount_utils.rs  mountns.rs  namespace.rs  num_cpus.rs  paths.rs  proc_unix.rs  pty.rs  pwd.rs  readlink.rs  result.rs  rlimit.rs  sigstr.rs  socket_proxy.rs  statvfs.rs  test_utils.rs  (+7 more)
src/attach/: child.rs  idmap_helper.rs  mod.rs  parent.rs
src/container/: command.rs  containerd.rs  docker.rs  lxc.rs  lxd.rs  mod.rs  nspawn.rs  podman.rs  process_id.rs  rkt.rs
src/daemon/: executor.rs  mod.rs  protocol.rs  socket.rs
src/exec/: mod.rs
src/proc/: mod.rs  unix.rs
src/procfs/: mod.rs  unix.rs
src/sys_ext/: mod.rs
src/sys_ext/internal/: fchownat.rs  fstatvfs.rs  ioctl.rs  linkat.rs  mknodat.rs  mod.rs  prctl.rs  (+6 more)
src/syscalls/: capability.rs  mod.rs  mount_api.rs  prctl.rs
tests/: cntrfs.rs  integration.rs  userns.rs
tests/common/: mod.rs
(+1 files in other folders)
