[package]
name = "cntr"
edition = "2024"
description = "A container debugging tool based on Linux mount API"
version = "1.6.1"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
categories = ["development-tools::debugging", "os::unix-apis"]
repository = "https://github.com/Mic92/cntr"
license = "MIT"

[dependencies]
log = "0.4.28"
libc = "0.2.177"
nix = { version = "0.30.1", features = [
  "fs",
  "mount",
  "poll",
  "process",
  "sched",
  "signal",
  "socket",
  "user",
  "term",
] }
container-pid = "1.0"
anyhow = "1.0"

[[bin]]
name = "cntr"
path = "src/bin/main.rs"
