[package]
name = "cntr"
edition = "2024"
rust-version = "1.85"
description = "A container debugging tool based on Linux mount API"
version = "2.0.0"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
categories = ["development-tools::debugging", "os::unix-apis"]
repository = "https://github.com/Mic92/cntr"
license = "MIT"

[dependencies]
log = "0.4.29"
libc = "0.2.180"
nix = { version = "0.31.1", features = [
  "dir",
  "fs",
  "mount",
  "poll",
  "process",
  "sched",
  "signal",
  "socket",
  "user",
  "term",
] }
container-pid = "1.0"
anyhow = "1.0"

[[bin]]
name = "cntr"
path = "src/bin/main.rs"
